--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,6 +36,7 @@ requirements:
     - awkward-pandas >=2023.8.0
     - numexpr >=2.7.0
     - uproot >=5.0.0
+    - awkward >=2.6.0
 
 test:
   imports:
