--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ requirements:
     - seaborn >=0.11.0
     - awkward-pandas >=2023.8.0
     - numexpr >=2.7.0
-    - uproot >=5.0.0
+    - uproot >=5.0.0,!=5.6.8
     - awkward >=2.6.0
 
 test:
